--- a/SalesWeb/appsettings.json
+++ b/SalesWeb/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebContext-b136a284-988d-45e3-95f2-7d9eb29c7684;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
